syntax = "proto3";

package api.services.ceph.v1;

import "api/resources/ceph/v1/ceph.proto";

option go_package = "github.com/koor-tech/data-control-center/gen/go/api/services/ceph";

message GetCephUsersRequest {}

message GetCephUsersResponse {
 repeated api.resources.ceph.v1.User ceph_users = 1;
}

message CreateCephUsersRequest {
  api.resources.ceph.v1.User ceph_user = 1;
}

message CreateCephUsersResponse {
  api.resources.ceph.v1.User ceph_user = 1;
}

service CephService {
  rpc GetCephUsers(GetCephUsersRequest) returns (GetCephUsersResponse) {}
  rpc CreateCephUsers(CreateCephUsersRequest) returns (CreateCephUsersResponse) {}
}
