syntax = "proto3";

package api.services.ceph.v1;

import "api/resources/ceph/v1/users.proto";

option go_package = "github.com/koor-tech/data-control-center/gen/go/api/services/ceph";

message ListCephUsersRequest {}

message ListCephUsersResponse {
 repeated api.resources.ceph.v1.User ceph_users = 1;
}

message CreateCephUserRequest {
  api.resources.ceph.v1.User ceph_user = 1;
}

message CreateCephUserResponse {
  api.resources.ceph.v1.User ceph_user = 1;
}

message DeleteCephUserRequest {
  string username = 1;
}

message DeleteCephUserResponse {
  string status = 1;
}

service CephUsersService {
  rpc ListCephUsers(ListCephUsersRequest) returns (ListCephUsersResponse) {}
  rpc CreateCephUser(CreateCephUserRequest) returns (CreateCephUserResponse) {}
  rpc DeleteCephUser(DeleteCephUserRequest )returns (DeleteCephUserResponse) {}
}
